2012-08-24  Asterisk Development Team <asteriskteam@digium.com>

	* Certified Asterisk 1.8.11-cert6 Released.

2012-08-24 13:55 +0000 [r371650-371651]  Matthew Jordan <mjordan@digium.com>

	* configs/sip.conf.sample, main/cel.c, channels/sip/include/sip.h,
	  main/xmldoc.c, main/channel.c, /, channels/chan_sip.c: Merge
	  patches for 1.8.11-cert6 This includes the following * r369351
	  for AST-883 * r368807 for AST-884 * r356604, r356650, r364203 for
	  AST-890 * r370618 for AST-896 * r370205, r370273, r370360 for
	  AST-916 * r371469 for AST-932

	* main/cdr.c, /: Merge r369351 for AST-883

2012-08-07 15:40 +0000 [r370843]  Mark Michelson <mmichelson@digium.com>

	* channels/sip/config_parser.c, channels/sip/include/sip.h, /,
	  channels/chan_sip.c: Fix error in the "IPorHost" section of a SIP
	  dialstring. This is based on the review request posted by Walter
	  Doekes (referenced lower in the commit message) The main fix here
	  is to treat the IPorHost portion of the dial string as a
	  temporary outbound proxy. This ensures requests get sent to the
	  proper location. Due to the age of the request, some parts were
	  no longer relevant. For instance, the request moved outbound
	  proxy parsing code into a single method. This is done in a
	  previous commit, so it was not necessary to do again. Also, the
	  review request fixed some errors with regards to request routing
	  for CANCEL and ACK requests. This has also been fixed in more
	  recent commits. (closes issue ASTERISK-19677) reported by Walter
	  Doekes Review https://reviewboard.asterisk.org/r/1859 ........
	  Merged revisions 370769 from
	  http://svn.asterisk.org/svn/asterisk/branches/1.8

2012-07-27  Asterisk Development Team <asteriskteam@digium.com>

	* Certified Asterisk 1.8.11-cert5 Released.

2012-07-11  Asterisk Development Team <asteriskteam@digium.com>

	* Certified Asterisk 1.8.11-cert5-rc2 Released.

	* channels/sig_analog.c: Fix bad merge of r368759 in sig_analog
