@@ -1,108 +1,0 @@
-                                Release Summary
-
-                        certified-asterisk-1.8.11-cert6
-
-                                Date: 2012-08-24
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Closed Issues
-    4. Other Changes
-    5. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes new features. For a list of new features that have
-   been included with this release, please see the CHANGES file inside the
-   source package. Since this is new major release, users are encouraged to
-   do extended testing before upgrading to this version in a production
-   environment.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, certified-asterisk-1.8.11-cert5.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   2 mjordan                                         1 wdoekes                
-   1 mmichelson             
-
-     ----------------------------------------------------------------------
-
-                                 Closed Issues
-
-                                 [Back to Top]
-
-   This is a list of all issues from the issue tracker that were closed by
-   changes that went into this release.
-
-  Category: Channels/chan_sip/General
-
-   ASTERISK-19677: SIP dial string //IPorHost does not work like expected
-   Revision: 370843
-   Reporter: wdoekes
-   Coders: mmichelson
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 371650   | mjordan | Merge r369351 for AST-883     |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 371651   | mjordan | Merge patches for             |                   |
-   |          |         | 1.8.11-cert6                  |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- channels/chan_sip.c          |  209 ++++++++++++++++++++++++-------------------
- channels/sip/config_parser.c |   25 +++--
- channels/sip/include/sip.h   |    4
- configs/sip.conf.sample      |    7 +
- main/cdr.c                   |    6 -
- main/cel.c                   |   46 +++++++++
- main/channel.c               |    7 +
- main/xmldoc.c                |    4
- 8 files changed, 203 insertions(+), 105 deletions(-)
-
-     ----------------------------------------------------------------------
