@@ -1,3 +1,13 @@
+2012-08-30  Asterisk Development Team <asteriskteam@digium.com>
+
+        * Asterisk 1.8.11-cert7 Released.
+	
+        * AST-2012-013: Resolve ACL rules being ignored during calls by some
+          IAX2 peers
+			  
+        * AST-2012-012: Resolve AMI User Unauthorized Shell Access through
+          ExternalIVR
+
 2012-08-24  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Certified Asterisk 1.8.11-cert6 Released.
